--- a/web/home/home.css
+++ b/web/home/home.css
@@ -38,7 +38,6 @@
     border: solid;*/
     z-index:2;
     overflow: scroll;
-
 }
 
 .resultsInfoHome{
@@ -49,10 +48,24 @@
 .tableResultsVideo td{
     padding:5px;
 }
-
 .tableResultsVideo .tableResultsVideo1 td{
     padding:5px;
 }
+
+.tableResultsSocialNetwork td{
+    padding:5px;
+}
+.tableResultsSocialNetwork .tableResultsSocialNetwork1 td{
+    padding:5px;
+}
+
+.tableResultsWebsite td{
+    padding:5px;
+}
+.tableResultsWebsite .tableResultsWebsite1 td{
+    padding:5px;
+}
+
 
 /*.titleInfoHome{
     position:relative;
